task-cc66da/environment/manifests/overlays/production/ipblock-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: edge-ingress-ipblock
  namespace: epsilon
spec:
  podSelector:
    matchLabels:
      app: nginx-ingress
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 10.0.0.0/8
        except:
        - 10.255.0.0/16
    ports:
    - port: 80
      protocol: TCP
  - from:
    - ipBlock:
        cidr: 172.16.0.0/12
    ports:
    - port: 443
      protocol: TCP
